# linc

./: CLAUDE.md  package-lock.json  package.json
.claude/: launch.json
.claude/agents/: graph-developer.md
client/: index.html  package.json  vite.config.js
client/src/: App.jsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs
client/src/components/: ControlPanel.jsx  FolderTree.jsx  GraphCanvas.jsx  GraphCanvas3D.jsx  GraphControls.jsx  SearchBar.jsx  Sidebar.jsx
client/src/hooks/: useD3Simulation.js  useGraphData.js
client/src/utils/: graphColors.js
server/: index.js  package.json
server/graph/: builder.js
server/parsers/: csharp.js  golang.js  index.js  javascript.js  python.js
server/routes/: graph.js
