[package]
name = "linc"
version = "0.1.0"
description = "linc — code dependency graph visualizer"
authors = ["ZEN-ZAI"]
license = "MIT"
repository = "https://github.com/ZEN-ZAI/linc"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tracing-subscriber = "0.3"
tracing = "0.1"
